test/testFiles/fail/assoc_fail.fcl
#----------------------------------------------------
# Testing Incorrect Association Syntax
# What's Wrong: No Value for Association.
# -- Use of Equals(=) is not valid.
#----------------------------------------------------
x : #include "filename.ext"

y = 5
